ui/css/styles.css
@import "bootstrap.min.css";
@import "recurly.css";
body {
  font-family: "source-sans-pro", sans-serif;
  font-weight: 400;
}
a {
  color: #e74117;
  border-bottom: 1px dotted #8a270e;
}
a:hover {
  color: black;
  text-decoration: none;
  border-bottom: 1px dotted black;
}
h2,
h3 {
  font-family: "proxima-nova-sc-osf", sans-serif;
  font-style: normal;
  font-weight: 800;
  padding-bottom: 5px;
  border-bottom: 1px solid #777775;
}
img {
  max-width: 100%;
}
.btn-primary,
.btn-national {
  color: #fff;
  background-color: #e74117;
  border-color: #8a270e;
  font-family: "source-sans-pro", sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 12px;
  padding: 4px 10px;
}
.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active {
  background-color: #8a270e;
  border-color: #2d0d05;
}
header {
  background: #5d5d5c;
  overflow: hidden;
  height: 63px;
}
footer,
#faq,
#featurettes1,
#featurettes2 {
  background: #f2f6e2;
  padding: 20px 0 20px 0;
}
.testimonial p {
  font-family: "source-sans-pro", sans-serif;
  font-style: normal;
  font-weight: 200;
  color: #5d5d5c;
  font-size: 2.5rem;
}
.testimonial p.cite {
  font-style: italic;
}
.testimonial {
  padding-top: 15px;
  padding-bottom: 15px;
}
.testimonial img {
  border-radius: 50%;
  margin-top: 15px;
  display: none;
}
header h1 {
  background: url('../img/tyee-logo-national-150px.png') no-repeat 50px 8px #a6be30;
  margin: 0;
  padding: 14px 0 10px 0;
  text-indent: -5000px;
  width: 250px;
  border-right: 1px solid white;
  float: left;
}
header h2 {
  color: white;
  float: left;
  font-family: "proxima-nova-alt", sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 1.8em;
  letter-spacing: 0.1em;
  position: relative;
  top: 2px;
  left: 24px;
  text-transform: uppercase;
  border-bottom: none;
}
#content-inner {
  margin-bottom: 40px;
}
#harper {
  float: right;
}
#campaign-copy {
  margin-bottom: 10px;
  padding: 0 10px 0 10px;
}
#campaign-copy h1 {
  font-family: "proxima-nova-alt", sans-serif;
  font-style: normal;
  font-weight: 800;
  color: #d51e00;
  font-size: 40px;
  margin: 40px 0 20px;
}
#campaign-copy h1 span.join-us {
  color: #a6be30;
}
#campaign-copy h1 span.triangle {
  background: url('../img/triangle.png') no-repeat center;
  padding-left: 26px;
}
#campaign-copy .lead {
  font-family: "proxima-nova-alt", sans-serif;
  font-style: normal;
  font-weight: 400;
  text-transform: uppercase;
  color: #a6be30;
}
#people h3 {
  border-bottom: none;
  text-transform: uppercase;
  color: #90908f;
  font-family: "source-sans-pro", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
}
#people blockquote {
  font-family: "source-sans-pro", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 20px;
  color: #8e9e38;
  border-left: none;
  padding: 0;
  margin: 0 0 20px 0;
}
#campaign-widget {
  background-color: #f2f6e2;
  border-color: #cfde94;
}
#campaign-widget .progress-bar {
  background-color: #e74117;
}
.badge {
  background-color: #a4bc30;
}
.video-container {
  position: relative;
  padding-bottom: 58.25%%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
  margin-bottom: 20px;
}
.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: 500px;
}
#form {
  margin-bottom: 40px;
}
#form .tab-content {
  margin-top: 20px;
}
#form-onetime label {
  margin-top: 20px;
  font-weight: normal;
}
#form-onetime .input-group {
  margin-bottom: 20px;
}
#builder-list {
  margin-bottom: 20px;
}
#builder-list ul {
  margin: 0;
  padding: 0;
}
#builder-list ul li {
  list-style: none;
  display: inline;
}
#builder-list ul li:after {
  content: ", ";
}
#builder-list ul li.last:after {
  content: ".";
}
#partner-orgs .modal-body ul {
  list-style: none;
  margin: 0 0 40px 0;
  padding: 0;
}
#partner-orgs .modal-body ul li a {
  text-decoration: none;
  border: none;
}
#campaign-widget {
  width: 300px;
  font-size: 110%;
}
#campaign-widget .raised,
#campaign-widget .days {
  font-family: "source-sans-pro", sans-serif;
  font-size: 300%;
  font-weight: bold;
}
#campaign-widget .raised {
  color: #e74117;
  letter-spacing: 0.1em;
}
#campaign-widget .raised-goal {
  color: #e74117;
}
#campaign-widget .hour,
#campaign-widget .minute {
  font-family: "source-sans-pro", sans-serif;
  font-size: 200%;
  font-weight: bold;
}
#campaign-widget .contributor-list {
  list-style: none;
  margin: 0;
  padding: 0;
  height: 25px;
  overflow: hidden;
}
#campaign-widget .reader-priorities {
  text-align: left;
}
#campaign-widget .reader-priorities ul {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: left;
}
#campaign-widget hr.soften {
  margin: 0 0 5px 0;
  border-top: 1px solid #dbe7a0;
}
header {
  background: url('../img/header-bg-national.png') repeat;
}
header h1 {
  background: url('../img/tyee-logo-mapleleaf.png') no-repeat center center;
  border: none;
}
footer,
#faq,
#featurettes1,
#featurettes2 {
  background: url('../img/section-bg-mapleleafs.png') repeat;
}
@media screen and (min-width: 768px) {
  /* Adjust for large desktop */
  .video-container {
    padding-bottom: 40%;
    margin-bottom: 0px;
  }
  .video-container iframe,
  .video-container object,
  .video-container embed {
    width: 95%;
    height: 95%;
    max-height: 400px;
  }
  #campaign-copy {
    padding: 0 10px 0 10px;
  }
  #campaign-copy h1 {
    font-size: 70px;
    margin: 40px 0 40px;
  }
  #campaign-copy h1 span.triangle {
    background: url('../img/triangle.png') no-repeat center;
    padding-left: 18px;
  }
  #campaign-copy .lead {
    font-weight: 300;
  }
  .btn-primary,
  .btn-national {
    padding: 10px 16px;
    font-weight: 400;
    font-size: 18px;
  }
  .testimonial p.quotation {
    font-size: 4rem;
    line-height: 1.2;
  }
  #form-onetime .input-group {
    width: 35%;
  }
}
@media screen and (min-width: 768px) and (max-width: 1024px) {
  /* Adjust for standard desktop */
  .container {
    padding-left: 80px;
    padding-right: 80px;
  }
  #form-onetime .input-group {
    width: 45%;
  }
}
@media screen and (min-width: 768px) and (max-width: 992px) {
  /* portrait tablets */
  .video-container {
    padding-bottom: 60%;
    margin-bottom: 40px;
  }
  .video-container iframe,
  .video-container object,
  .video-container embed {
    width: 99%;
    height: 99%;
  }
  #campaign-widget {
    width: 100%;
  }
  #form-onetime .input-group {
    width: 55%;
  }
}
@media screen and (min-width: 992px) {
  .testimonial img {
    display: block;
  }
}
html.lt-ie7 body div,
html.lt-ie7 header {
  display: none;
}
html.lt-ie7 .chromeframe {
  display: block;
  padding: 20px;
}
/* Recurly overrides */
#recurly-subscribe .due_now {
  display: none;
}
#recurly-subscribe .name {
  display: none;
}
#recurly-subscribe .recurly .plan .recurring_cost {
  text-align: left;
  float: left;
}
#recurly-subscribe .cost {
  float: left;
}
#recurly-subscribe .interval {
  font-weight: bold;
  float: left;
  text-transform: uppercase;
  font-size: 1em;
  padding-top: 16px;
  margin-left: 10px;
}
.recurly .contact_info,
.recurly .billing_info,
.recurly .accept_tos,
.recurly .footer {
  padding: 0;
}
.recurly button.submit {
  background: none;
  box-shadow: none;
  text-shadow: none;
  padding: 10px 16px;
  font-size: 18px;
  line-height: 1.33;
  border-radius: 6px;
  color: #fff;
  background-color: #5cb85c;
  border-color: #4cae4c;
  font-weight: normal;
  cursor: pointer;
}
.recurly button.submit:hover {
  color: white;
  text-decoration: none;
  background-color: #449d44;
}
.recurly .field .placeholder {
  line-height: inherit;
}
.recurly input[type=text] {
  height: 24px;
}
#content .recurly {
  width: auto;
  max-width: 500px;
}
/* Really wish I didn't need to do this, but Recurly's form is not responsive! */
@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
  .recurly .field {
    width: auto;
  }
  .recurly .field.last_name,
  .recurly .field.cvv,
  .recurly .field.zip {
    margin-left: 0;
  }
  .recurly .field input[type=text] {
    width: auto;
  }
  .recurly .payment_method .payment_option {
    float: left;
    margin-top: 10px;
  }
}
#content-inner form .btn-group {
  display: block;
}
#content-inner form .btn-group label {
  margin-bottom: 30px;
}
#content-inner form .submit-button {
  clear: both;
}
form #newspriorities label {
  font-weight: bold;
  text-transform: uppercase;
}
.awards {
  text-align: center;
  margin: 20px 0 20px 0;
}

